2010-06-02  Colin Watson  <cjwatson@ubuntu.com>

	* conf/any-emu.rmk (kernel_img_SOURCES) [!x86]: Include
	kern/$(target_cpu)/cache.S even if TARGET_NO_MODULES = yes.

2010-06-01  Colin Watson  <cjwatson@ubuntu.com>

	Add btrfs probing support, currently only in the single-device case.

	* kern/emu/getroot.c (find_root_device_from_mountinfo): New
	function.
	(grub_guess_root_device): Call find_root_device_from_mountinfo
	before looking in /dev.

2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/i386/pc/biosdisk.c (grub_biosdisk_open): Use
	GRUB_DISK_SIZE_UNKNOWN.
	* disk/ieee1275/ofdisk.c (grub_ofdisk_open): Likewise.

2010-05-31  Jiro SEKIBA <jir@unicus.jp>

	* include/grub/disk.h (GRUB_DISK_SIZE_UNKNOWN): New macro.
	* fs/nilfs.c: Support 2nd super block in case 1st one is accidently
	corrupted or not synced properly.

2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/main.c (grub_normal_add_menu_entry): Avoid going out of args.
	Reported by: Seth Goldberg.

2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/multiboot_mbi2.c (grub_multiboot_make_mbi): Fix incorrect
	addition of dest.
	Reported by: Seth Goldberg.

2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/setpci.c (grub_setpci_iter): Fix an incorrect function check.
	Reported by: Seth Goldberg.

2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/multiboot_elfxx.c (grub_multiboot_load_elfXX) [__mips]: Check
	64-bit address as signed on MIPS.

2010-05-28  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: AC_PROG_LEX sets LEX to ":" if lex is missing, not
	to the empty string.

2010-05-28  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix grub-emu issues on NetBSD, with gcc 4.1.3.

	* conf/any-emu.rmk: Remove unnecessary COMMON_CFLAGS.
	* include/grub/emu/misc.h (canonicalize_file_name): New Prototype.
	* kern/misc.c (__enable_execute_stack): Disable on
	GRUB_MACHINE_EMU.

2010-05-28  Colin Watson  <cjwatson@ubuntu.com>
